y.output
Terminals unused in grammar

    CONTINUE


State 0 conflicts: 6 shift/reduce
State 14 conflicts: 6 shift/reduce
State 19 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 293 conflicts: 1 shift/reduce
State 295 conflicts: 1 shift/reduce
State 326 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: decs_var subprograms principal subprograms
    2     | decs_var principal subprograms
    3     | decs_var subprograms principal
    4     | decs_var principal

    5 decs_var: ε
    6         | dec_var decs_var
    7         | assigns

    8 dec_var: type ids SEMI
    9        | type ID ASSIGN p_values SEMI
   10        | type ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   11        | type ID dims SEMI
   12        | type_modifiers type ids SEMI
   13        | type_modifiers type ID ASSIGN p_values SEMI
   14        | type_modifiers type ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   15        | type_modifiers type ID dims SEMI
   16        | type MULT ID ASSIGN p_values SEMI
   17        | type MULT ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   18        | type MULT ID dims SEMI
   19        | type_modifiers type MULT ID ASSIGN p_values SEMI
   20        | type_modifiers type MULT ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   21        | type_modifiers type MULT ID dims SEMI
   22        | type_modifier STRUCT ID BLOCK_BEGIN decs_var BLOCK_END SEMI
   23        | STRUCT ID BLOCK_BEGIN decs_var BLOCK_END SEMI
   24        | type_modifier STRUCT ID BLOCK_BEGIN BLOCK_END SEMI
   25        | STRUCT ID BLOCK_BEGIN BLOCK_END SEMI

   26 type_modifiers: type_modifier
   27               | type_modifier type_modifier

   28 type_modifier: CONST
   29              | STATIC
   30              | ENUM
   31              | STRUCT

   32 type: INT
   33     | DOUBLE
   34     | FLOAT
   35     | CHAR
   36     | STRING
   37     | BOOLEAN

   38 ids: atomo
   39    | ids COMMA atomo
   40    | atomo COMMA p_values

   41 atomo: ID
   42      | ID dims
   43      | AMPERSAND ID
   44      | MULT ID
   45      | ID DOT ID

   46 dims: OPEN_BRACK CLOSE_BRACK
   47     | OPEN_BRACK CLOSE_BRACK dims
   48     | OPEN_BRACK value CLOSE_BRACK
   49     | OPEN_BRACK value CLOSE_BRACK dims
   50     | OPEN_BRACK expr CLOSE_BRACK
   51     | OPEN_BRACK expr CLOSE_BRACK dims
   52     | OPEN_BRACK ID CLOSE_BRACK
   53     | OPEN_BRACK ID CLOSE_BRACK dims

   54 p_values: expr
   55         | expr COMMA p_values

   56 expr: expr PLUS term
   57     | expr MINUS term
   58     | expr ADD_ASSIGN term
   59     | expr SUB_ASSIGN term
   60     | term

   61 term: term MULT factor
   62     | term DIV factor
   63     | term MODULE factor
   64     | factor

   65 factor: OPEN_PAREN expr CLOSE_PAREN
   66       | atomo
   67       | ID INCREMENT
   68       | ID DECREMENT
   69       | function_call
   70       | value

   71 value: INT_NUMBER
   72      | FLOAT_NUMBER
   73      | STRING_VALUE
   74      | NULL_VALUE

   75 assigns: assign_def
   76        | assign_mat
   77        | assign_def assigns

   78 assign_def: ID ASSIGN expr SEMI

   79 assign_mat: ID dims ASSIGN expr SEMI
   80           | ID dims ASSIGN ID dims SEMI

   81 subprograms: subprogram
   82            | subprogram subprograms

   83 subprogram: proc
   84           | function

   85 proc: VOID ID OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
   86     | VOID ID OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END

   87 function: type ID OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts RETURN factor SEMI BLOCK_END
   88         | type ID OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts RETURN factor SEMI BLOCK_END

   89 params: param
   90       | param COMMA params

   91 param: type dims ID
   92      | type ID

   93 stmts: stmt
   94      | stmt stmts

   95 stmt: dec_var
   96     | assigns
   97     | function_call
   98     | conditional_stmt
   99     | iteration_stmt
  100     | scan_stmt
  101     | print_stmt

  102 scan_stmt: SCAN OPEN_PAREN ID CLOSE_PAREN SEMI

  103 print_stmt: PRINT OPEN_PAREN print_content CLOSE_PAREN SEMI
  104           | PRINT OPEN_PAREN CLOSE_PAREN SEMI

  105 print_content: expr
  106              | print_content PLUS expr
  107              | STRING_VALUE PLUS print_content

  108 conditional_stmt: if_stmt
  109                 | switch_stmt

  110 if_stmt: IF OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
  111        | IF OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END ELSE BLOCK_BEGIN stmts BLOCK_END
  112        | IF OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END else_if_stmt ELSE BLOCK_BEGIN stmts BLOCK_END
  113        | IF OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END else_if_stmt

  114 else_if_stmt: ELSE_IF OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
  115             | else_if_stmt else_if_stmt

  116 logic_expr: logic_expr logic_op c_term
  117           | c_term

  118 c_term: ID
  119       | ID dims
  120       | TRUE
  121       | FALSE
  122       | comp

  123 comp: expr comp_op expr

  124 comp_op: EQ
  125        | NEQ
  126        | GE
  127        | LE
  128        | GT
  129        | LT

  130 logic_op: AND
  131         | OR
  132         | NOT

  133 switch_stmt: SWITCH COLON OPEN_PAREN ID CLOSE_PAREN BLOCK_BEGIN switch_cases DEFAULT COLON stmts BLOCK_END

  134 switch_cases: ε
  135             | CASE value COLON stmts BREAK switch_cases

  136 iteration_stmt: while_stmt
  137               | for_stmt
  138               | dowhile_stmt

  139 while_stmt: WHILE OPEN_PAREN logic_expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END

  140 for_stmt: FOR OPEN_PAREN dec_var logic_expr SEMI expr CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END

  141 dowhile_stmt: DO BLOCK_BEGIN stmts BLOCK_END WHILE OPEN_PAREN logic_expr CLOSE_PAREN SEMI

  142 function_call: ID OPEN_PAREN args CLOSE_PAREN SEMI
  143              | ID OPEN_PAREN CLOSE_PAREN SEMI

  144 args: args arg
  145     | arg

  146 arg: ids

  147 principal: MAIN OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
  148          | MAIN OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sValue> (258) 9 10 11 13 14 15 16 17 18 19 20 21 22 23 24 25 41 42 43 44 45 52 53 67 68 78 79 80 85 86 87 88 91 92 102 118 119 133 142 143
    INT_NUMBER <sValue> (259) 71
    FLOAT_NUMBER <sValue> (260) 72
    STRING_VALUE <sValue> (261) 73 107
    INT (262) 32
    DOUBLE (263) 33
    FLOAT (264) 34
    CHAR (265) 35
    STRING (266) 36
    BOOLEAN (267) 37
    NULL_VALUE (268) 74
    VOID (269) 85 86
    STRUCT (270) 22 23 24 25 31
    ENUM (271) 30
    TRUE (272) 120
    FALSE (273) 121
    WHILE (274) 139 141
    DO (275) 141
    SWITCH (276) 133
    CASE (277) 135
    DEFAULT (278) 133
    IF (279) 110 111 112 113
    ELSE (280) 111 112
    ELSE_IF (281) 114
    FOR (282) 140
    CONTINUE (283)
    BREAK (284) 135
    CONST (285) 28
    STATIC (286) 29
    RETURN (287) 87 88
    MAIN (288) 147 148
    SCAN (289) 102
    PRINT (290) 103 104
    OPEN_PAREN (291) 65 85 86 87 88 102 103 104 110 111 112 113 114 133 139 140 141 142 143 147 148
    CLOSE_PAREN (292) 65 85 86 87 88 102 103 104 110 111 112 113 114 133 139 140 141 142 143 147 148
    OPEN_BRACK (293) 46 47 48 49 50 51 52 53
    CLOSE_BRACK (294) 46 47 48 49 50 51 52 53
    BLOCK_BEGIN (295) 10 14 17 20 22 23 24 25 85 86 87 88 110 111 112 113 114 133 139 140 141 147 148
    BLOCK_END (296) 10 14 17 20 22 23 24 25 85 86 87 88 110 111 112 113 114 133 139 140 141 147 148
    SEMI (297) 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 78 79 80 87 88 102 103 104 140 141 142 143
    COLON (298) 133 135
    DOT (299) 45
    COMMA (300) 39 40 55 90
    AMPERSAND (301) 43
    PLUS (302) 56 106 107
    MINUS (303) 57
    DIV (304) 62
    MULT (305) 16 17 18 19 20 21 44 61
    INCREMENT (306) 67
    DECREMENT (307) 68
    MODULE (308) 63
    ASSIGN (309) 9 10 13 14 16 17 19 20 78 79 80
    ADD_ASSIGN (310) 58
    SUB_ASSIGN (311) 59
    EQ (312) 124
    NEQ (313) 125
    LT (314) 129
    GT (315) 128
    LE (316) 127
    GE (317) 126
    AND (318) 130
    OR (319) 131
    NOT (320) 132


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    prog (67)
        on left: 1 2 3 4
        on right: 0
    decs_var <rec> (68)
        on left: 5 6 7
        on right: 1 2 3 4 6 22 23
    dec_var <rec> (69)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 6 95 140
    type_modifiers <rec> (70)
        on left: 26 27
        on right: 12 13 14 15 19 20 21
    type_modifier <rec> (71)
        on left: 28 29 30 31
        on right: 22 24 26 27
    type <rec> (72)
        on left: 32 33 34 35 36 37
        on right: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 87 88 91 92
    ids <rec> (73)
        on left: 38 39 40
        on right: 8 12 39 146
    atomo <rec> (74)
        on left: 41 42 43 44 45
        on right: 38 39 40 66
    dims <rec> (75)
        on left: 46 47 48 49 50 51 52 53
        on right: 10 11 14 15 17 18 20 21 42 47 49 51 53 79 80 91 119
    p_values <rec> (76)
        on left: 54 55
        on right: 9 10 13 14 16 17 19 20 40 55
    expr <rec> (77)
        on left: 56 57 58 59 60
        on right: 50 51 54 55 56 57 58 59 65 78 79 105 106 123 140
    term <rec> (78)
        on left: 61 62 63 64
        on right: 56 57 58 59 60 61 62 63
    factor <rec> (79)
        on left: 65 66 67 68 69 70
        on right: 61 62 63 64 87 88
    value <rec> (80)
        on left: 71 72 73 74
        on right: 48 49 70 135
    assigns <rec> (81)
        on left: 75 76 77
        on right: 7 77 96
    assign_def <rec> (82)
        on left: 78
        on right: 75 77
    assign_mat <rec> (83)
        on left: 79 80
        on right: 76
    subprograms <rec> (84)
        on left: 81 82
        on right: 1 2 3 82
    subprogram <rec> (85)
        on left: 83 84
        on right: 81 82
    proc <rec> (86)
        on left: 85 86
        on right: 83
    function <rec> (87)
        on left: 87 88
        on right: 84
    params <rec> (88)
        on left: 89 90
        on right: 85 87 90 147
    param <rec> (89)
        on left: 91 92
        on right: 89 90
    stmts <rec> (90)
        on left: 93 94
        on right: 85 86 87 88 94 110 111 112 113 114 133 135 139 140 141 147 148
    stmt <rec> (91)
        on left: 95 96 97 98 99 100 101
        on right: 93 94
    scan_stmt <rec> (92)
        on left: 102
        on right: 100
    print_stmt <rec> (93)
        on left: 103 104
        on right: 101
    print_content <rec> (94)
        on left: 105 106 107
        on right: 103 106 107
    conditional_stmt <rec> (95)
        on left: 108 109
        on right: 98
    if_stmt <rec> (96)
        on left: 110 111 112 113
        on right: 108
    else_if_stmt <rec> (97)
        on left: 114 115
        on right: 112 113 115
    logic_expr <rec> (98)
        on left: 116 117
        on right: 110 111 112 113 114 116 139 140 141
    c_term <rec> (99)
        on left: 118 119 120 121 122
        on right: 116 117
    comp <rec> (100)
        on left: 123
        on right: 122
    comp_op <rec> (101)
        on left: 124 125 126 127 128 129
        on right: 123
    logic_op <rec> (102)
        on left: 130 131 132
        on right: 116
    switch_stmt <rec> (103)
        on left: 133
        on right: 109
    switch_cases <rec> (104)
        on left: 134 135
        on right: 133 135
    iteration_stmt <rec> (105)
        on left: 136 137 138
        on right: 99
    while_stmt <rec> (106)
        on left: 139
        on right: 136
    for_stmt <rec> (107)
        on left: 140
        on right: 137
    dowhile_stmt <rec> (108)
        on left: 141
        on right: 138
    function_call <rec> (109)
        on left: 142 143
        on right: 69 97
    args <rec> (110)
        on left: 144 145
        on right: 142 144
    arg <rec> (111)
        on left: 146
        on right: 144 145
    principal <rec> (112)
        on left: 147 148
        on right: 1 2 3 4


State 0

    0 $accept: • prog $end

    ID       shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    STRUCT   shift, and go to state 8
    ENUM     shift, and go to state 9
    CONST    shift, and go to state 10
    STATIC   shift, and go to state 11

    INT       [reduce using rule 5 (decs_var)]
    DOUBLE    [reduce using rule 5 (decs_var)]
    FLOAT     [reduce using rule 5 (decs_var)]
    CHAR      [reduce using rule 5 (decs_var)]
    STRING    [reduce using rule 5 (decs_var)]
    BOOLEAN   [reduce using rule 5 (decs_var)]
    $default  reduce using rule 5 (decs_var)

    prog            go to state 12
    decs_var        go to state 13
    dec_var         go to state 14
    type_modifiers  go to state 15
    type_modifier   go to state 16
    type            go to state 17
    assigns         go to state 18
    assign_def      go to state 19
    assign_mat      go to state 20


State 1

   78 assign_def: ID • ASSIGN expr SEMI
   79 assign_mat: ID • dims ASSIGN expr SEMI
   80           | ID • dims ASSIGN ID dims SEMI

    OPEN_BRACK  shift, and go to state 21
    ASSIGN      shift, and go to state 22

    dims  go to state 23


State 2

   32 type: INT •

    $default  reduce using rule 32 (type)


State 3

   33 type: DOUBLE •

    $default  reduce using rule 33 (type)


State 4

   34 type: FLOAT •

    $default  reduce using rule 34 (type)


State 5

   35 type: CHAR •

    $default  reduce using rule 35 (type)


State 6

   36 type: STRING •

    $default  reduce using rule 36 (type)


State 7

   37 type: BOOLEAN •

    $default  reduce using rule 37 (type)


State 8

   23 dec_var: STRUCT • ID BLOCK_BEGIN decs_var BLOCK_END SEMI
   25        | STRUCT • ID BLOCK_BEGIN BLOCK_END SEMI
   31 type_modifier: STRUCT •

    ID  shift, and go to state 24

    $default  reduce using rule 31 (type_modifier)


State 9

   30 type_modifier: ENUM •

    $default  reduce using rule 30 (type_modifier)


State 10

   28 type_modifier: CONST •

    $default  reduce using rule 28 (type_modifier)


State 11

   29 type_modifier: STATIC •

    $default  reduce using rule 29 (type_modifier)


State 12

    0 $accept: prog • $end

    $end  shift, and go to state 25


State 13

    1 prog: decs_var • subprograms principal subprograms
    2     | decs_var • principal subprograms
    3     | decs_var • subprograms principal
    4     | decs_var • principal

    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    VOID     shift, and go to state 26
    MAIN     shift, and go to state 27

    type         go to state 28
    subprograms  go to state 29
    subprogram   go to state 30
    proc         go to state 31
    function     go to state 32
    principal    go to state 33


State 14

    6 decs_var: dec_var • decs_var

    ID       shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    STRUCT   shift, and go to state 8
    ENUM     shift, and go to state 9
    CONST    shift, and go to state 10
    STATIC   shift, and go to state 11

    INT       [reduce using rule 5 (decs_var)]
    DOUBLE    [reduce using rule 5 (decs_var)]
    FLOAT     [reduce using rule 5 (decs_var)]
    CHAR      [reduce using rule 5 (decs_var)]
    STRING    [reduce using rule 5 (decs_var)]
    BOOLEAN   [reduce using rule 5 (decs_var)]
    $default  reduce using rule 5 (decs_var)

    decs_var        go to state 34
    dec_var         go to state 14
    type_modifiers  go to state 15
    type_modifier   go to state 16
    type            go to state 17
    assigns         go to state 18
    assign_def      go to state 19
    assign_mat      go to state 20


State 15

   12 dec_var: type_modifiers • type ids SEMI
   13        | type_modifiers • type ID ASSIGN p_values SEMI
   14        | type_modifiers • type ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   15        | type_modifiers • type ID dims SEMI
   19        | type_modifiers • type MULT ID ASSIGN p_values SEMI
   20        | type_modifiers • type MULT ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   21        | type_modifiers • type MULT ID dims SEMI

    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7

    type  go to state 35


State 16

   22 dec_var: type_modifier • STRUCT ID BLOCK_BEGIN decs_var BLOCK_END SEMI
   24        | type_modifier • STRUCT ID BLOCK_BEGIN BLOCK_END SEMI
   26 type_modifiers: type_modifier •
   27               | type_modifier • type_modifier

    STRUCT  shift, and go to state 36
    ENUM    shift, and go to state 9
    CONST   shift, and go to state 10
    STATIC  shift, and go to state 11

    $default  reduce using rule 26 (type_modifiers)

    type_modifier  go to state 37


State 17

    8 dec_var: type • ids SEMI
    9        | type • ID ASSIGN p_values SEMI
   10        | type • ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   11        | type • ID dims SEMI
   16        | type • MULT ID ASSIGN p_values SEMI
   17        | type • MULT ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   18        | type • MULT ID dims SEMI

    ID         shift, and go to state 38
    AMPERSAND  shift, and go to state 39
    MULT       shift, and go to state 40

    ids    go to state 41
    atomo  go to state 42


State 18

    7 decs_var: assigns •

    $default  reduce using rule 7 (decs_var)


State 19

   75 assigns: assign_def •
   77        | assign_def • assigns

    ID  shift, and go to state 1

    ID        [reduce using rule 75 (assigns)]
    $default  reduce using rule 75 (assigns)

    assigns     go to state 43
    assign_def  go to state 19
    assign_mat  go to state 20


State 20

   76 assigns: assign_mat •

    $default  reduce using rule 76 (assigns)


State 21

   46 dims: OPEN_BRACK • CLOSE_BRACK
   47     | OPEN_BRACK • CLOSE_BRACK dims
   48     | OPEN_BRACK • value CLOSE_BRACK
   49     | OPEN_BRACK • value CLOSE_BRACK dims
   50     | OPEN_BRACK • expr CLOSE_BRACK
   51     | OPEN_BRACK • expr CLOSE_BRACK dims
   52     | OPEN_BRACK • ID CLOSE_BRACK
   53     | OPEN_BRACK • ID CLOSE_BRACK dims

    ID            shift, and go to state 44
    INT_NUMBER    shift, and go to state 45
    FLOAT_NUMBER  shift, and go to state 46
    STRING_VALUE  shift, and go to state 47
    NULL_VALUE    shift, and go to state 48
    OPEN_PAREN    shift, and go to state 49
    CLOSE_BRACK   shift, and go to state 50
    AMPERSAND     shift, and go to state 39
    MULT          shift, and go to state 51

    atomo          go to state 52
    expr           go to state 53
    term           go to state 54
    factor         go to state 55
    value          go to state 56
    function_call  go to state 57


State 22

   78 assign_def: ID ASSIGN • expr SEMI

    ID            shift, and go to state 58
    INT_NUMBER    shift, and go to state 45
    FLOAT_NUMBER  shift, and go to state 46
    STRING_VALUE  shift, and go to state 47
    NULL_VALUE    shift, and go to state 48
    OPEN_PAREN    shift, and go to state 49
    AMPERSAND     shift, and go to state 39
    MULT          shift, and go to state 51

    atomo          go to state 52
    expr           go to state 59
    term           go to state 54
    factor         go to state 55
    value          go to state 60
    function_call  go to state 57


State 23

   79 assign_mat: ID dims • ASSIGN expr SEMI
   80           | ID dims • ASSIGN ID dims SEMI

    ASSIGN  shift, and go to state 61


State 24

   23 dec_var: STRUCT ID • BLOCK_BEGIN decs_var BLOCK_END SEMI
   25        | STRUCT ID • BLOCK_BEGIN BLOCK_END SEMI

    BLOCK_BEGIN  shift, and go to state 62


State 25

    0 $accept: prog $end •

    $default  accept


State 26

   85 proc: VOID • ID OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
   86     | VOID • ID OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END

    ID  shift, and go to state 63


State 27

  147 principal: MAIN • OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END
  148          | MAIN • OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts BLOCK_END

    OPEN_PAREN  shift, and go to state 64


State 28

   87 function: type • ID OPEN_PAREN params CLOSE_PAREN BLOCK_BEGIN stmts RETURN factor SEMI BLOCK_END
   88         | type • ID OPEN_PAREN CLOSE_PAREN BLOCK_BEGIN stmts RETURN factor SEMI BLOCK_END

    ID  shift, and go to state 65


State 29

    1 prog: decs_var subprograms • principal subprograms
    3     | decs_var subprograms • principal

    MAIN  shift, and go to state 27

    principal  go to state 66


State 30

   81 subprograms: subprogram •
   82            | subprogram • subprograms

    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    VOID     shift, and go to state 26

    $default  reduce using rule 81 (subprograms)

    type         go to state 28
    subprograms  go to state 67
    subprogram   go to state 30
    proc         go to state 31
    function     go to state 32


State 31

   83 subprogram: proc •

    $default  reduce using rule 83 (subprogram)


State 32

   84 subprogram: function •

    $default  reduce using rule 84 (subprogram)


State 33

    2 prog: decs_var principal • subprograms
    4     | decs_var principal •

    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    CHAR     shift, and go to state 5
    STRING   shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    VOID     shift, and go to state 26

    $default  reduce using rule 4 (prog)

    type         go to state 28
    subprograms  go to state 68
    subprogram   go to state 30
    proc         go to state 31
    function     go to state 32


State 34

    6 decs_var: dec_var decs_var •

    $default  reduce using rule 6 (decs_var)


State 35

   12 dec_var: type_modifiers type • ids SEMI
   13        | type_modifiers type • ID ASSIGN p_values SEMI
   14        | type_modifiers type • ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   15        | type_modifiers type • ID dims SEMI
   19        | type_modifiers type • MULT ID ASSIGN p_values SEMI
   20        | type_modifiers type • MULT ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   21        | type_modifiers type • MULT ID dims SEMI

    ID         shift, and go to state 69
    AMPERSAND  shift, and go to state 39
    MULT       shift, and go to state 70

    ids    go to state 71
    atomo  go to state 42


State 36

   22 dec_var: type_modifier STRUCT • ID BLOCK_BEGIN decs_var BLOCK_END SEMI
   24        | type_modifier STRUCT • ID BLOCK_BEGIN BLOCK_END SEMI
   31 type_modifier: STRUCT •

    ID  shift, and go to state 72

    $default  reduce using rule 31 (type_modifier)


State 37

   27 type_modifiers: type_modifier type_modifier •

    $default  reduce using rule 27 (type_modifiers)


State 38

    9 dec_var: type ID • ASSIGN p_values SEMI
   10        | type ID • dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   11        | type ID • dims SEMI
   41 atomo: ID •
   42      | ID • dims
   45      | ID • DOT ID

    OPEN_BRACK  shift, and go to state 21
    DOT         shift, and go to state 73
    ASSIGN      shift, and go to state 74

    $default  reduce using rule 41 (atomo)

    dims  go to state 75


State 39

   43 atomo: AMPERSAND • ID

    ID  shift, and go to state 76


State 40

   16 dec_var: type MULT • ID ASSIGN p_values SEMI
   17        | type MULT • ID dims ASSIGN BLOCK_BEGIN p_values BLOCK_END SEMI
   18        | type MULT • ID dims SEMI
   44 atomo: MULT • ID

    ID  shift, and go to state 77


State 41

    8 dec_var: type ids • SEMI
   39 ids: ids • COMMA atomo

    SEMI   shift, and go to state 78
    COMMA  shift, and go to state 79


State 42

   38 ids: atomo •
   40    | atomo • COMMA p_values

    COMMA  shift, and go to state 80

    COMMA     [reduce using rule 38 (ids)]
    $default  reduce using rule 38 (ids)


State 43

   77 assigns: assign_def assigns •

    $default  reduce using rule 77 (assigns)


State 44

   41 atomo: ID •
   42      | ID • dims
   45      | ID • DOT ID
   52 dims: OPEN_BRACK ID • CLOSE_BRACK
   53     | OPEN_BRACK ID • CLOSE_BRACK dims
   67 factor: ID • INCREMENT
   68       | ID • DECREMENT
  142 function_call: ID • OPEN_PAREN args CLOSE_PAREN SEMI
  143              | ID • OPEN_PAREN CLOSE_PAREN SEMI

    OPEN_PAREN   shift, and go to state 81
    OPEN_BRACK   shift, and go to state 21
    CLOSE_BRACK  shift, and go to state 82
    DOT          shift, and go to state 73
    INCREMENT    shift, and go to state 83
    DECREMENT    shift, and go to state 84

    CLOSE_BRACK  [reduce using rule 41 (atomo)]
    $default     reduce using rule 41 (atomo)

    dims  go to state 85


State 45

   71 value: INT_NUMBER •

    $default  reduce using rule 71 (value)


State 46

   72 value: FLOAT_NUMBER •

    $default  reduce using rule 72 (value)


State 47

   73 value: STRING_VALUE •

    $default  reduce using rule 73 (value)


State 48

   74 value: NULL_VALUE •

    $default  reduce using rule 74 (value)


State 49

   65 factor: OPEN_PAREN • expr CLOSE_PAREN

    ID            shift, and go to state 58
    INT_NUMBER    shift, and go to state 45
    FLOAT_NUMBER  shift, and go to state 46
    STRING_VALUE  shift, and go to state 47
    NULL_VALUE    shift, and go to state 48
    OPEN_PAREN    shift, and go to state 49
    AMPERSAND     shift, and go to state 39
    MULT          shift, and go to state 51

    atomo          go to state 52
    expr           go to state 86
    term           go to state 54
    factor         go to state 55
    value          go to state 60
    function_call  go to state 57


State 50

   46 dims: OPEN_BRACK CLOSE_BRACK •
   47     | OPEN_BRACK CLOSE_BRACK • dims

    OPEN_BRACK  shift, and go to state 21

    $default  reduce using rule 46 (dims)

    dims  go to state 87


State 51

   44 atomo: MULT • ID

    ID  shift, and go to state 88


State 52

   66 factor: atomo •

    $default  reduce using rule 66 (factor)


State 53

   50 dims: OPEN_BRACK expr • CLOSE_BRACK
   51     | OPEN_BRACK expr • CLOSE_BRACK dims
   56 expr: expr • PLUS term
   57     | expr • MINUS term
   58     | expr • ADD_ASSIGN term
   59     | expr • SUB_ASSIGN term

    CLOSE_BRACK  shift, and go to state 89
    PLUS         shift, and go to state 90
    MINUS        shift, and go to state 91
    ADD_ASSIGN   shift, and go to state 92
    SUB_ASSIGN   shift, and go to state 93


State 54

   60 expr: term •
   61 term: term • MULT factor
   62     | term • DIV factor
   63     | term • MODULE factor

    DIV     shift, and go to state 94
    MULT    shift, and go to state 95
    MODULE  shift, and go to state 96

    MULT      [reduce using rule 60 (expr)]
    $default  reduce using rule 60 (expr)


State 55

   64 term: factor •

    $default  reduce using rule 64 (term)


State 56

   48 dims: OPEN_BRACK value • CLOSE_BRACK
   49     | OPEN_BRACK value • CLOSE_BRACK dims
   70 factor: value •

    CLOSE_BRACK  shift, and go to state 97

    CLOSE_BRACK  [reduce using rule 70 (factor)]
    $default     reduce using rule 70 (factor)


State 57

   69 factor: function_call •

    $default  reduce using rule 69 (factor)


State 58

   41 atomo: ID •
   42      | ID • dims
   45      | ID • DOT ID
   67 factor: ID • INCREMENT
   68       | ID • DECREMENT
  142 function_call: ID • OPEN_PAREN args CLOSE_PAREN SEMI
  143              | ID • OPEN_PAREN CLOSE_PAREN SEMI

    OPEN_PAREN  shift, and go to state 81
    OPEN_BRACK  shift, and go to state 21
    DOT         shift, and go to state 73
    INCREMENT   shift, and go to state 83
    DECREMENT   shift, and go to state 84

    $default  reduce using rule 41 (atomo)

    dims  go to state 85


State 59

   56 expr: expr • PLUS term
   57     | expr • MINUS term
   58     | expr • ADD_ASSIGN term
   59     | expr • SUB_ASSIGN term
   78 assign_def: ID ASSIGN expr • SEMI

    SEMI        shift, and go to state 98
    PLUS        shift, and go to state 90
    MINUS       shift, and go to state 91
    ADD_ASSIGN  shift, and go to state 92
    SUB_ASSIGN  shift, and go to state 93


State 60

   70 factor: value •

    $default  reduce using rule 70 (factor)


State 61

   79 assign_mat: ID dims ASSIGN • expr SEMI
   80           | ID dims ASSIGN • ID dims SEMI

    ID            shift, and go to state 99
    INT_NUMBER    shift, and go to state 45
    FLOAT_NUMBER  shift, and go to state 46
    STRING_VALUE  shift, and go to state 47
    NULL_VALUE    shift, and go to state 48
    OPEN_PAREN    shift, and go to state 49
    AMPERSAND     shift, and go to state 39
    MULT          shift, and go to state 51

    atomo          go to state 52
    expr           go to state 100
    term           go to state 54
    factor         go to state 55
    value          go to state 60
    function_call  go to state 57


State 62

   23 dec_var: STRUCT ID BLOCK_BEGIN • decs_var BLOCK_END SEMI
   25        | STRUCT ID BLOCK_BEGIN • BLOCK_END SEMI
